esercizi_k8s/pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-secret
spec:
  containers:
  - name: ubuntu-container
    image: ubuntu:latest
    command: ["/bin/bash", "-c", "sleep 3600"] # Il Pod resta attivo per 1 ora
